# mailer

./: .dockerignore  .env.example  .example.env  .flake8  .gitignore  .nowignore  .pre-commit-config.yml  .travis.yml  .vercelignore  404.html  CHANGELOG.md  CNAME  Dockerfile  LICENSE  Pipfile  Procfile  README.md  SECURITY.md  _sidebar.md  app.json  deployment.md  index.html  mkdocs.yml  mypy.ini  now.json  pyproject.toml  renovate.json  sitemap.xml  tasks.py  usage.md  vercel.json
.github/workflows/: ci-cd.yml  ci.yml  cleanup.yml  lockfile.yml
changelog/: index.html
contributing/: index.html
deployment/: index.html
docs/: README.md  contributing.md  deployment.md  index.html  index.md  usage.md
docs/examples/: simple-ajax-recaptcha.html
docs/examples/simple-ajax/: view.md
examples/: README.md  simple-ajax-pgp.html  simple-ajax-recaptcha.html  simple-ajax.html
examples/simple-ajax-recaptcha/: code.md
mailer/: __about__.py  __init__.py  api.py  config.py  extensions.py  home.py  mailer.py  recaptcha.py  sentry.py  settings.py  wsgi.py
mailer/providers/: __init__.py  sendgrid.py
mailer/services/: sendgrid.py
search/: search_index.json
templates/: homepage.html
tests/: conftest.py  test_api.py  test_home.py  test_mailer.py  test_settings.py  utils.py
usage/: index.html
