[project]
name = "mailer"
description = "Dead-simple mailer micro-service for static websites"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Romain Clement", email = "git@romain-clement.net" }
]
dynamic = ["version"]
requires-python = "==3.12.11"
dependencies = [
    "aiocontextvars==0.2.2",
    "cryptography==46.0.3",
    "fastapi[all]==0.123.0",
    "gunicorn==23.0.0",
    "honcho==2.0.0",
    "pgpy==0.6.0",
    "requests==2.32.5",
    "sentry-sdk[fastapi]==2.46.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Repository = "https://github.com/rclement/mailer"
Issues = "https://github.com/rclement/mailer/issues"
Changelog = "https://github.com/rclement/mailer/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "bandit==1.9.2",
    "faker==38.2.0",
    "invoke==2.2.1",
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.0",
    "mypy==1.19.0",
    "pip-audit==2.10.0",
    "pre-commit==4.5.0",
    "pytest==9.0.1",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "python-dotenv==1.2.1",
    "responses==0.25.8",
    "ruff==0.14.7",
    "types-certifi==2021.10.8.3",
    "types-requests==2.32.4.20250913",
]

[tool.hatch.version]
path = "mailer/__about__.py"

[tool.mypy]
plugins = ["pydantic.mypy"]
show_error_codes = true
pretty = true
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = "mailer.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "faker.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "pgpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sentry_sdk.*"
no_implicit_reexport = false
